// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createFetch should create fetch with middlewares 1`] = `
[
  "/api",
  {
    "body": undefined,
    "headers": {},
  },
]
`;

exports[`createFetch should create fetch with middlewares 2`] = `
[
  "/api?filter=name",
  {
    "body": undefined,
    "headers": {},
  },
]
`;

exports[`createFetch should create fetch with middlewares 3`] = `
[
  "/api",
  {
    "body": "{"name":"JoJo"}",
    "headers": {
      "content-type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`createFetch should create fetch with middlewares 4`] = `
[
  "/api?filter=name",
  {
    "body": URLSearchParams: "name=JoJo",
    "headers": {
      "content-type": "application/x-www-form-urlencoded;charset=UTF-8",
    },
    "method": "POST",
  },
]
`;

exports[`createFetch should create fetch without middlewares 1`] = `
[
  "/api",
]
`;

exports[`createFetch should create fetch without middlewares 2`] = `
[
  "/api",
  {
    "headers": {
      "x-version": "1",
    },
  },
]
`;
